# GENIE-MC-Generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.cmake  environment.yml
cmake/defaults/: CMakeLists.txt
cmake/functions/: CMakeLists.txt  GenieAddLibrary.cmake  GenieGetDirInfo.cmake  GenieNameTarget.cmake
cmake/modules/: Findlog4cpp.cmake
src/Framework/: CMakeLists.txt
src/Framework/Algorithm/: AlgConfigPool.cxx  CMakeLists.txt
src/Framework/Conventions/: CMakeLists.txt  GBuild.h.in  GVersion.h.in
src/Framework/GHEP/: CMakeLists.txt
src/Framework/Interaction/: CMakeLists.txt
src/Framework/Messenger/: CMakeLists.txt  Messenger.cxx
src/Framework/Numerical/: CMakeLists.txt
src/Framework/ParticleData/: CMakeLists.txt
src/Framework/Registry/: CMakeLists.txt
src/Framework/Utils/: CMakeLists.txt  PrintUtilsLinkDef.h  RunOpt.cxx  RunOpt.h  StringUtilsLinkDef.h  TuneId.cxx  UtilsLinkDef.h  XmlFilePaths.cxx  XmlFilePaths.h  XmlParserUtils.cxx  XmlParserUtils.h  XmlParserUtilsLinkDef.h
